Added class quail-failed-element class to new tests

--- a/test/accessibility-tests/aInPHasADistinctStyle.html
+++ b/test/accessibility-tests/aInPHasADistinctStyle.html
@@ -160,7 +160,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="aInPHasADistinctStyle">
 		<p>Some text
-			<a href="">
+			<a href="" class="quail-failed-element">
 				With a link
 			</a>
 		inside it.</p>
@@ -169,7 +169,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="aInPHasADistinctStyle">
 		<p>Some text
-			<a href="" class="onlyfocus">
+			<a href="" class="onlyfocus quail-failed-element">
 				With a link
 			</a>
 		inside it.</p>
@@ -178,7 +178,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="aInPHasADistinctStyle">
 		<p style="font-decoration:underlined">Some text
-			<a href="">
+			<a href="" class="quail-failed-element">
 				With a link
 			</a>
 		inside it.</p>
@@ -187,7 +187,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="aInPHasADistinctStyle">
 		<p><strong>Some text
-			<a href="">
+			<a href="" class="quail-failed-element">
 				With a link
 			</a></strong>
 		inside it.</p>
