--- a/test/accessibility-tests/tagsAreNestedCorrectly-xml.html
+++ b/test/accessibility-tests/tagsAreNestedCorrectly-xml.html
@@ -18,12 +18,12 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="tagsAreNestedCorrectly">
 	<!-- These are not allowed in an xhtml file -->
-		<input>
-		<img>
-		<meta>
-		<link>
-		<br>
-		<area>
+		<input class="quail-failed-element">
+		<img class="quail-failed-element">
+		<meta class="quail-failed-element">
+		<link class="quail-failed-element">
+		<br class="quail-failed-element">
+		<area class="quail-failed-element">
 	</div>
 
 	<script src="../quail-testrunner.js"></script>
