--- a/test/accessibility-tests/tagsAreNestedCorrectly.html
+++ b/test/accessibility-tests/tagsAreNestedCorrectly.html
@@ -55,7 +55,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="tagsAreNestedCorrectly">
 		<p>
-			<a href="">
+			<a href="" class="quail-failed-element">
 				<b> <input />
 			</a></b> <br>
 			<strong></strong>
@@ -65,7 +65,7 @@
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="tagsAreNestedCorrectly">
 		<p>
-			<a href="">
+			<a href="" class="quail-failed-element">
 				<b> <input />
 			</b> <br>
 			<strong></strong>
@@ -74,12 +74,12 @@
 	
 	<div class="quail-test" data-expected="fail"
 	data-accessibility-test="tagsAreNestedCorrectly">
-		<input></input>
-		<img></img>
-		<meta></meta>
-		<link></link>
-		<br></br>
-		<area></area>
+		<input class="quail-failed-element"></input>
+		<img class="quail-failed-element"></img>
+		<meta class="quail-failed-element"></meta>
+		<link class="quail-failed-element"></link>
+		<br class="quail-failed-element"></br>
+		<area class="quail-failed-element"></area>
 	</div>
 	
 	<script src="../quail-testrunner.js"></script>
