Added inapplicable test to headersAttrRefers...

--- a/test/accessibility-tests/headersAttrRefersToATableCell.html
+++ b/test/accessibility-tests/headersAttrRefersToATableCell.html
@@ -4,6 +4,11 @@
 	<title>headersAttrRefersToATableCell</title>
 </head>
 <body>
+	
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="headersAttrRefersToATableCell">
+		<!-- No content -->
+	</div>
 
 	<div class="quail-test" data-expected="inapplicable"
 	data-accessibility-test="headersAttrRefersToATableCell">
