--- a/test/accessibility-tests/aInPHasADistinctStyle.html
+++ b/test/accessibility-tests/aInPHasADistinctStyle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-    <title>aInPHasADistinctStyle</title>
+    <title>aInPhasADistinctStyle</title>
     <style>
         a {
             text-decoration: none;
@@ -24,7 +24,7 @@
 <body>
 
 <div class="quail-test" data-expected="inapplicable"
-     data-accessibility-test="aInPHasADistinctStyle">
+     data-accessibility-test="aInPhasADistinctStyle">
     <p><a href="">
         A link
     </a></p>
