selector+test basic implement for areaHasAltValue

--- a/test/accessibility-tests/areaHasAltValue.html
+++ b/test/accessibility-tests/areaHasAltValue.html
@@ -20,27 +20,30 @@
         href="reference.html" />
       </map>
 		</div>
-	
-		<div  class="quail-test" data-expected="inapplicable"
-		data-accessibility-test="areaHasAltValue">
-		  <map id="map3" name="map2">
-          <area class="quail-failed-element" shape="rect" coords="0,0,30,30" href="reference.html" />
-      </map>
-		</div>	
+
 
 		<div  class="quail-test" data-expected="inapplicable"
 		data-accessibility-test="areaHasAltValue">
 			<!-- No area element -->
 		</div>
 
-		<img  usemap="#map4" src="" alt="" style="display:none;" />
+<!--
 		<div  class="quail-test" data-expected="inapplicable"
 		data-accessibility-test="areaHasAltValue">
-		  <map id="map4" name="map2">
-          <area class="quail-failed-element" shape="rect" coords="0,0,30,30" href="reference.html" />
+		  <map id="map3" name="map2">
+          <area shape="rect" coords="0,0,30,30" href="reference.html" />
       </map>
 		</div>
 
+		<img  usemap="#map4" src="" alt="" style="display:none;" />
+
+		<div  class="quail-test" data-expected="inapplicable"
+		data-accessibility-test="areaHasAltValue">
+		  <map id="map4" name="map2">
+          <area shape="rect" coords="0,0,30,30" href="reference.html" />
+      </map>
+		</div>
+-->
 		<script src="../quail-testrunner.js"></script>
 	</body>
 </html>
