--- a/test/accessibility-tests/imgHasAlt.html
+++ b/test/accessibility-tests/imgHasAlt.html
@@ -4,6 +4,17 @@
 		<title>imgHasAlt</title>
 	</head>
 	<body>
+
+		<div class="quail-test" data-expected="inapplicable"
+		data-accessibility-test="imgHasAlt">
+			<!-- no content -->
+		</div>
+
+		<div class="quail-test" data-expected="inapplicable"
+		data-accessibility-test="imgHasAlt">
+		  <img src="../assets/rex.jpg" style="display:none" alt="My cat"/>
+		</div>
+
 		<div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
 		  <img src="../assets/rex.jpg" alt="My cat"/>
 		</div>
