--- a/test/accessibility-tests/inputImageHasAlt.html
+++ b/test/accessibility-tests/inputImageHasAlt.html
@@ -4,10 +4,22 @@
 	<title>inputImageHasAlt</title>
 </head>
 <body>
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="inputImageHasAlt">
+		
+	</div>
+
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="inputImageHasAlt">
+		<input type="image" src="../assets/finddogs.gif"
+		style="display:none" />
+	</div>
+
 	<div class="quail-test" data-expected="fail" data-accessibility-test="inputImageHasAlt">
 		<form action="http://example.com/prog/text-read" method="post">
 			<p>
-				<input type="image" name="submit" "../assets/finddogs.gif" class="quail-failed-element"/>
+				<input type="image" name="submit" 
+				src="../assets/finddogs.gif" class="quail-failed-element"/>
 			</p>
 		</form>
 	</div>
@@ -15,7 +27,8 @@
 	<div class="quail-test" data-expected="pass" data-accessibility-test="inputImageHasAlt">
 		<form action="http://example.com/prog/text-read" method="post">
 			<p>
-				<input type="image" name="submit" "../assets/finddogs.gif" alt="Find Dogs"/>
+				<input type="image" name="submit" 
+				src="../assets/finddogs.gif" alt="Find Dogs"/>
 			</p>
 		</form>
 	</div>
