--- a/test/accessibility-tests/aInPHasADistinctStyle.html
+++ b/test/accessibility-tests/aInPHasADistinctStyle.html
@@ -61,7 +61,7 @@
 <div class="quail-test" data-expected="pass"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" style="text-decoration:underline">
+        <a href="/" style="text-decoration:underline">
             With a link
         </a>
         inside it.</p>
@@ -70,7 +70,7 @@
 <div class="quail-test" data-expected="pass"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" style="display:block; margin:1em;">
+        <a href="/" style="display:block; margin:1em;">
             With a link
         </a>
         inside it.</p>
@@ -79,7 +79,7 @@
 <div class="quail-test" data-expected="pass"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" style="float:right;">
+        <a href="/" style="float:right;">
             With a link
         </a>
         inside it.</p>
@@ -88,7 +88,7 @@
 <div class="quail-test" data-expected="pass"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" style="position:absolute; top:-1em; right:0;">
+        <a href="/" style="position:absolute; top:-1em; right:0;">
             With a link
         </a></p>
 </div>
@@ -96,17 +96,17 @@
 <div class="quail-test" data-expected="pass"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" style="border-bottom:dashed 1px red">
+        <a href="/" style="border-bottom:dashed 1px red">
             With a link
         </a>
         inside it.</p>
 </div>
 
 <div class="quail-test" data-expected="pass"
-     data-accessibility-test="aInPHasADistinctStyle">
-    <!-- links with iamges are probably sufficiently distinguishable -->
+           data-accessibility-test="aInPHasADistinctStyle">
+    <!-- links with images are probably sufficiently distinguishable -->
     <p>Some text
-        <a href="">
+        <a href="/">
             With a link <img src="" alt=""/>
         </a>
         inside it.</p>
@@ -118,23 +118,9 @@
         with a destinct still, it also passes -->
     <p>Some text
 			<span style="background:blue">
-			  <a href="" style="text-decoration:underline">
+			  <a href="/" style="text-decoration:underline">
                   With a link
               </a></span>
-        inside it.</p>
-</div>
-
-<div class="quail-test" data-expected="pass"
-     data-accessibility-test="aInPHasADistinctStyle">
-    <!-- Links with :before or :after where content is added can
-        be passed as well -->
-    <p>Some text
-        <a href="" class="prepend">
-            With a link
-        </a>,
-        <a href="" class="append">
-            With a link
-        </a>
         inside it.</p>
 </div>
 
@@ -143,16 +129,16 @@
     <!--The above is also true when it comes from
     native style changes -->
     <p>Some text
-        <strong><a href="" style="text-decoration:underline">
+        <strong><a href="/" style="text-decoration:underline">
             With a link
         </a></strong>,
-        <em><a href="" style="text-decoration:underline">
+        <em><a href="/" style="text-decoration:underline">
             With a link
         </a></em>,
-        <b><a href="" style="text-decoration:underline">
+        <b><a href="/" style="text-decoration:underline">
             With a link
         </a></b>,
-        <u><a href="" style="text-decoration:underline">
+        <u><a href="/" style="text-decoration:underline">
             With a link
         </a></u>
         inside it.</p>
@@ -161,16 +147,7 @@
 <div class="quail-test" data-expected="fail"
      data-accessibility-test="aInPHasADistinctStyle">
     <p>Some text
-        <a href="" class="quail-failed-element">
-            With a link
-        </a>
-        inside it.</p>
-</div>
-
-<div class="quail-test" data-expected="fail"
-     data-accessibility-test="aInPHasADistinctStyle">
-    <p>Some text
-        <a href="" class="onlyfocus quail-failed-element">
+        <a href="/" class="quail-failed-element">
             With a link
         </a>
         inside it.</p>
@@ -179,7 +156,7 @@
 <div class="quail-test" data-expected="fail"
      data-accessibility-test="aInPHasADistinctStyle">
     <p style="font-decoration:underlined">Some text
-        <a href="" class="quail-failed-element">
+        <a href="/" class="quail-failed-element">
             With a link
         </a>
         inside it.</p>
@@ -188,7 +165,7 @@
 <div class="quail-test" data-expected="fail"
      data-accessibility-test="aInPHasADistinctStyle">
     <p><strong>Some text
-        <a href="" class="quail-failed-element">
+        <a href="/" class="quail-failed-element">
             With a link
         </a></strong>
         inside it.</p>
