--- a/test/accessibility-tests/linkHasAUniqueContext.html
+++ b/test/accessibility-tests/linkHasAUniqueContext.html
@@ -13,7 +13,7 @@
 	<div class="quail-test" data-expected="pass"
 	data-accessibility-test="linkHasAUniqueContext">
 		<!-- Different link content -->
-		<a href="dogs">Dogs!</a>
+		<a href="dogs">Doglss!</a>
 		<a href="cats">Cats!</a>
 	</div>
 
