--- a/test/accessibility-tests/linkHasAUniqueContext.html
+++ b/test/accessibility-tests/linkHasAUniqueContext.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="linkHasAUniqueContext">
+		<p><!-- No links here --></p>
+	</div>
+
 	<div class="quail-test" data-expected="pass"
 	data-accessibility-test="linkHasAUniqueContext">
 		<!-- Different link content -->
