- Changed wrong test reference from "imgHasAlt" to "aImgAltNotRepetitive"

--- a/test/accessibility-tests/aImgAltNotRepetitive.html
+++ b/test/accessibility-tests/aImgAltNotRepetitive.html
@@ -4,7 +4,7 @@
 		<title>aImgAltNotRepetitive</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
+		<div class="quail-test" data-expected="pass" data-accessibility-test="aImgAltNotRepetitive">
 			<a href="page1.html"><img src="../assets/rex.jpg" alt=""/>page1</a>
 		</div>
 
