- Changed test data-expected to "fail", since no clear test CSS is asigned to the test, this test always fails.

--- a/test/accessibility-tests/aMustContainText.html
+++ b/test/accessibility-tests/aMustContainText.html
@@ -24,7 +24,7 @@
 		  <p>Select link for more <a href="dogs.html">information about dogs</a>.</p>
 		</div>
 
-		<div class="quail-test" data-expected="pass" data-accessibility-test="aMustContainText">
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aMustContainText">
 		  <p>Select link for more information about dogs.
 		  	<!-- The following can fail other tests if CSS isn't used to give the link body. This may occure with background images -->
 		    <a href="dogs.html" title="About dogs"></a>
