--- a/test/accessibility-tests/checkboxHasLabel.html
+++ b/test/accessibility-tests/checkboxHasLabel.html
@@ -35,7 +35,7 @@
       </p>
     </form>
   </div>
-  <div class="quail-test" data-expected="fail" data-accessibility-test="checkboxHasLabel">
+  <div class="quail-test" data-expected="pass" data-accessibility-test="checkboxHasLabel">
       <form action="http://somesite.com/prog/adduser" method="post">
           <p>
               <label>
