--- a/test/accessibility-tests/tableAxisHasCorrespondingId.html
+++ b/test/accessibility-tests/tableAxisHasCorrespondingId.html
@@ -17,7 +17,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="idRefHasCorrespondingId" title="Table where axis attributes are matched">
+	<div class="quail-test" data-expected="pass" data-accessibility-test="tableAxisHasCorrespondingId" title="Table where axis attributes are matched">
 		<table>
 			<thead>
 				<tr><th id="a1">Group one</th><th id="b1">Group two</th></tr>
