- Updated test, had wrong expected result.

--- a/test/accessibility-tests/fileHasLabel.html
+++ b/test/accessibility-tests/fileHasLabel.html
@@ -39,19 +39,18 @@
             </p>
         </form>
     </div>
-    <!-- Is same as test 3, but expects "pass" ? -->
-    <!--<div class="quail-test" data-expected="pass" data-accessibility-test="fileHasLabel">-->
+    <div class="quail-test" data-expected="pass" data-accessibility-test="fileHasLabel">
 
-        <!--<form action="http://www.test.com/testing" method="post">-->
-            <!--<p>-->
-                <!--<label>-->
-                    <!--I was walking down the street.-->
-                    <!--<input type="file" id="thefile" name="data"-->
-                    <!--tabindex="1" />-->
-                <!--</label>-->
-            <!--</p>-->
-        <!--</form>-->
-    <!--</div>-->
+        <form action="http://www.test.com/testing" method="post">
+            <p>
+                <label>
+                    I was walking down the street.
+                    <input type="file" id="thefile" name="data"
+                    tabindex="1" />
+                </label>
+            </p>
+        </form>
+    </div>
     <div class="quail-test" data-expected="pass" data-accessibility-test="fileHasLabel">
 
         <form action="http://www.test.com/testing" method="post">
