--- a/test/accessibility-tests/inputTextHasLabel.html
+++ b/test/accessibility-tests/inputTextHasLabel.html
@@ -29,7 +29,7 @@
         </form>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="inputTextHasLabel">
+    <div class="quail-test" data-expected="pass" data-accessibility-test="inputTextHasLabel">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
                 <label>
