- Refactored label tests - Fixed length issue in core isDataTable

--- a/test/accessibility-tests/fileHasLabel.html
+++ b/test/accessibility-tests/fileHasLabel.html
@@ -20,7 +20,7 @@
             </p>
         </form>
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="fileHasLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="fileHasLabel">
 
         <form action="http://www.test.com/testing" method="post">
             <p>
@@ -39,7 +39,7 @@
             </p>
         </form>
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="fileHasLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="fileHasLabel">
 
         <form action="http://www.test.com/testing" method="post">
             <p>
