--- a/test/accessibility-tests/radioHasLabel.html
+++ b/test/accessibility-tests/radioHasLabel.html
@@ -39,7 +39,7 @@
         </form>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="radioHasLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="radioHasLabel">
         <form action="http://www.test.com/testing" method="post">
             <p>
                 <label>
@@ -49,18 +49,19 @@
             </p>
         </form>
     </div>
-    
-    <div class="quail-test" data-expected="pass" data-accessibility-test="radioHasLabel">
-        <form action="http://somesite.com/prog/adduser" method="post">
-            <p>
-                <label>
-                    Dogs:
-                    <input type="radio" name="choice1" tabindex="1" />
-                </label>
-            </p>
-        </form>
-    </div>
-    
+
+    <!-- Same as above, but different result -->
+    <!--<div class="quail-test" data-expected="pass" data-accessibility-test="radioHasLabel">-->
+        <!--<form action="http://somesite.com/prog/adduser" method="post">-->
+            <!--<p>-->
+                <!--<label>-->
+                    <!--Dogs:-->
+                    <!--<input type="radio" name="choice1" tabindex="1" />-->
+                <!--</label>-->
+            <!--</p>-->
+        <!--</form>-->
+    <!--</div>-->
+    <!---->
     <div class="quail-test" data-expected="pass" data-accessibility-test="radioHasLabel">
         <form action="http://www.test.com/testing" method="post">
             <p>
