- Added audioMayBePresent tests

--- a/test/accessibility-tests/audioMayBePresent.html
+++ b/test/accessibility-tests/audioMayBePresent.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="quail-test" data-expected="inapplicable" data-accessibility-test="audioMayBePresent">
-      <!-- no video element present -->
+      <!-- no audio element present -->
     </div>
 
     <div class="quail-test" data-expected="cantTell" data-accessibility-test="audioMayBePresent">
