--- a/test/accessibility-tests/videoMayBePresent.html
+++ b/test/accessibility-tests/videoMayBePresent.html
@@ -13,6 +13,7 @@
         <source src="../assets/sample.ogv" type="video/ogv"/>
       </video>
     </div>
+
     <div class="quail-test" data-expected="cantTell" data-accessibility-test="videoMayBePresent">
       <iframe width="420" height="315"
               src="http://www.youtube.com/embed/XGSy3_Czz8k">
@@ -29,6 +30,21 @@
         <param name="allowfullscreen" value="true">
         <param name="flashvars" value="config={'clip':{'url':'../assets/sample.ogv','autoPlay':false}}">
       </object>
+    </div>
+
+    <div class="quail-test" data-expected="cantTell"
+    data-accessibility-test="videoMayBePresent">
+      <a href="horse.mov">Horse.mov</a>
+    </div>
+
+    <div class="quail-test" data-expected="inapplicable"
+    data-accessibility-test="videoMayBePresent">
+      <a href="horse">Horse</a>
+    </div>
+
+    <div class="quail-test" data-expected="inapplicable"
+    data-accessibility-test="videoMayBePresent">
+      <a href="about.mov.pdf">about.mov.pdf</a>
     </div>
 
     <script src="../quail-testrunner.js"></script>
