--- a/test/accessibility-tests/headersAttrRefersToATableCell.html
+++ b/test/accessibility-tests/headersAttrRefersToATableCell.html
@@ -2,6 +2,16 @@
 <html>
 <head>
     <title>headersAttrRefersToATableCell</title>
+    <style>
+        td,th {
+            border:solid 1px black;
+            width:100px;
+            padding:0 5px;
+        }
+        table {
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
 	
@@ -14,26 +24,12 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table>
         <tr>
-            <td id="tbl1-cell1"></td>
-            <td id="tbl1-cell2"></td>
+            <td id="tbl1-cell1">a</td>
+            <td id="tbl1-cell2">b</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-</div>
-
-<div class="quail-test" data-expected="pass"
-     data-accessibility-test="headersAttrRefersToATableCell">
-    <table>
-        <tr>
-            <th id="tbl2-cell1"></th>
-            <th id="tbl2-cell2"></th>
-        </tr>
-        <tr>
-            <td headers="tbl2-cell1"></td>
-            <td headers="tbl2-cell2"></td>
+            <td>c</td>
+            <td>d</td>
         </tr>
     </table>
 </div>
@@ -42,12 +38,12 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table>
         <tr>
-            <th id="tbl3-cell1" headers="tbl3-cell3"></th>
-            <th id="tbl3-cell2" headers="tbl3-cell1"></th>
+            <th id="tbl2-cell1">a</th>
+            <th id="tbl2-cell2">b</th>
         </tr>
         <tr>
-            <td headers="" id="tbl3-cell3"></td>
-            <td headers="tbl3-cell1 tbl3-cell2"></td>
+            <td headers="tbl2-cell1">c</td>
+            <td headers="tbl2-cell2">d</td>
         </tr>
     </table>
 </div>
@@ -56,13 +52,27 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table>
         <tr>
-            <th id="tbl4-cell1"></th>
-            <th id="tbl4-cell2"></th>
+            <th id="tbl3-cell1" headers="tbl3-cell3">a</th>
+            <th id="tbl3-cell2" headers="tbl3-cell1">b</th>
         </tr>
         <tr>
-            <td headers="tbl4-cell1   tbl4-cell2"></td>
+            <td headers="" id="tbl3-cell3">c</td>
+            <td headers="tbl3-cell1 tbl3-cell2">d</td>
+        </tr>
+    </table>
+</div>
+
+<div class="quail-test" data-expected="pass"
+     data-accessibility-test="headersAttrRefersToATableCell">
+    <table>
+        <tr>
+            <th id="tbl4-cell1">a</th>
+            <th id="tbl4-cell2">b</th>
+        </tr>
+        <tr>
+            <td headers="tbl4-cell1   tbl4-cell2">c</td>
             <td headers="tbl4-cell1
-						 tbl4-cell2"></td>
+						 tbl4-cell2">d</td>
         </tr>
     </table>
 </div>
@@ -72,7 +82,7 @@
     <table>
         <tr>
             <!-- refers to a different table -->
-            <td headers="tbl1-cell1" class="quail-failed-element"></td>
+            <td headers="tbl1-cell1" class="quail-failed-element">a</td>
         </tr>
     </table>
 
@@ -82,7 +92,7 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table id="tbl6">
         <tr>
-            <td headers="tbl6" class="quail-failed-element"></td>
+            <td headers="tbl6" class="quail-failed-element">a</td>
         </tr>
     </table>
 </div>
@@ -91,10 +101,10 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table>
         <tr id="tbl5-row1">
-            <th></th>
+            <th>a</th>
         </tr>
         <tr>
-            <td headers="tbl5-row1" class="quail-failed-element"></td>
+            <td headers="tbl5-row1" class="quail-failed-element">b</td>
         </tr>
     </table>
 </div>
@@ -103,7 +113,7 @@
      data-accessibility-test="headersAttrRefersToATableCell">
     <table>
         <tr>
-            <td headers="not-existing" class="quail-failed-element"></td>
+            <td headers="not-existing" class="quail-failed-element">a</td>
         </tr>
     </table>
 </div>
