*mayBePresent tests tweaked

--- a/test/accessibility-tests/audioMayBePresent.html
+++ b/test/accessibility-tests/audioMayBePresent.html
@@ -28,7 +28,8 @@
       </audio>
     </div>
 
-    <div class="quail-test" data-expected="cantTell" data-accessibility-test="audioMayBePresent">
+    <div class="quail-test" data-expected="cantTell"
+    data-accessibility-test="audioMayBePresent">
       <object></object>
     </div>
 
