--- a/test/accessibility-tests/videoMayBePresent.html
+++ b/test/accessibility-tests/videoMayBePresent.html
@@ -25,11 +25,7 @@
     </div>
 
     <div class="quail-test" data-expected="cantTell" data-accessibility-test="videoMayBePresent">
-      <object id="flowplayer" data="flowplayer-3.2.2.swf" type="application/x-shockwave-flash" width="320" height="240" >
-        <param name="movie" value="flowplayer-3.2.2.swf">
-        <param name="allowfullscreen" value="true">
-        <param name="flashvars" value="config={'clip':{'url':'../assets/sample.ogv','autoPlay':false}}">
-      </object>
+      <object></object>
     </div>
 
     <div class="quail-test" data-expected="cantTell"
