--- a/test/accessibility-tests/idrefHasCorrespondingId.html
+++ b/test/accessibility-tests/idrefHasCorrespondingId.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>idrefHasCorrespondingId</title>
+  <title>idRefHasCorrespondingId</title>
 </head>
 <body>
 
