--- a/test/accessibility-tests/audioMayBePresent.html
+++ b/test/accessibility-tests/audioMayBePresent.html
@@ -22,6 +22,13 @@
 
     <div class="quail-test" data-expected="cantTell"
     data-accessibility-test="audioMayBePresent">
+      <audio controls src="horse.ogg">
+        Your browser does not support the audio tag.
+      </audio>
+    </div>
+
+    <div class="quail-test" data-expected="cantTell"
+    data-accessibility-test="audioMayBePresent">
       <audio controls>
         <source src="horse.ogg" type="audio/ogg"></source>
         Your browser does not support the audio tag.
@@ -30,7 +37,7 @@
 
     <div class="quail-test" data-expected="cantTell"
     data-accessibility-test="audioMayBePresent">
-      <object></object>
+      <object>May be an audio player</object>
     </div>
 
     <script src="../quail-testrunner.js"></script>
