--- a/test/accessibility-tests/videoMayBePresent.html
+++ b/test/accessibility-tests/videoMayBePresent.html
@@ -21,7 +21,8 @@
     </div>
 
     <div class="quail-test" data-expected="cantTell" data-accessibility-test="videoMayBePresent">
-      <iframe src="//player.vimeo.com/video/VIDEO_ID" width="300" height="250" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe src="http://player.vimeo.com/video/107692527" width="420" height="315"
+      frameborder="0"></iframe>
     </div>
 
     <div class="quail-test" data-expected="cantTell" data-accessibility-test="videoMayBePresent">
