--- a/test/selenium-test/specs/aMustHaveTitle/aMustHaveTitle.html
+++ b/test/selenium-test/specs/aMustHaveTitle/aMustHaveTitle.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>We have information about <a href="dogs.html" title="dogs information">dogs</a> on our site.</p>
-    <p>We have more <a href="dogs.html" class="quail-failed-element">information about dogs</a> on our site.</p>
+    <p>We have more <a href="dogs.html">information about dogs</a> on our site.</p>
   </body>
 </html>
