--- a/test/selenium-test/specs/aMustHaveTitle/aMustHaveTitle.html
+++ b/test/selenium-test/specs/aMustHaveTitle/aMustHaveTitle.html
@@ -4,7 +4,9 @@
     <title>aMustHaveTitle</title>
   </head>
   <body>
+    <!-- passed -->
     <p>We have information about <a href="dogs.html" title="dogs information">dogs</a> on our site.</p>
+    <!-- failed -->
     <p>We have more <a href="dogs.html">information about dogs</a> on our site.</p>
   </body>
 </html>
