All the pass cases now pass

--- a/test/accessibility-tests/tagsAreNestedCorrectly-pass.html
+++ b/test/accessibility-tests/tagsAreNestedCorrectly-pass.html
@@ -18,19 +18,19 @@
     <input>
     <img>
     <meta>
-    <link >
-    <br >
-    <area >
+    <link>
+    <br>
+    <area>
 
-    <table><tr>
-      <th>Item <!-- th closing is optional -->
-      <td>Item <!-- td closing is optional -->
-      <!-- tr closing is optional -->
+    <table>
+      <tr>
+        <th>Item
+        <td>Item
     </table>
 
     <ul>
-      <li>Item <!-- li closing is optional -->
-      <li>Item <!-- li closing is optional -->
+      <li>Item
+      <li>Item
     </ul>
 
     <p>
@@ -38,7 +38,6 @@
         <b></b> <input />
       </a> <br>
       <strong></strong>
-    <!-- Closing of <p> is optional -->
   </div>
 
   <script src="../../lib/node-htmlparser/lib/htmlparser.js"></script>
