--- a/test/unit/testLibs.html
+++ b/test/unit/testLibs.html
@@ -57,6 +57,7 @@
       _case.resolve();
       equal(_case.get('selector'), '#defineUniqueSelector-1', 'ID-based selector was found');
       equal(_case.get('html'), '<div id="defineUniqueSelector-1"><p>First paragraph</p></div>', 'The correct HTML is returned');
+      _case = new libs.Case();
       _case.set({element: $('#defineUniqueSelector-1 p').get(0)});
       _case.resolve();
       equal(_case.get('selector'), '#defineUniqueSelector-1 p', 'Descendent selector was found');
