--- a/test/accessibility-tests/inputImageHasAlt.html
+++ b/test/accessibility-tests/inputImageHasAlt.html
@@ -6,7 +6,7 @@
 <body>
 	<div class="quail-test" data-expected="inapplicable"
 	data-accessibility-test="inputImageHasAlt">
-		
+
 	</div>
 
 	<div class="quail-test" data-expected="inapplicable"
@@ -18,8 +18,9 @@
 	<div class="quail-test" data-expected="fail" data-accessibility-test="inputImageHasAlt">
 		<form action="http://example.com/prog/text-read" method="post">
 			<p>
-				<input type="image" name="submit" 
-				src="../assets/finddogs.gif" class="quail-failed-element"/>
+				<!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
+				<input type="image" name="submit"
+				src="" class="quail-failed-element"/>
 			</p>
 		</form>
 	</div>
@@ -27,8 +28,9 @@
 	<div class="quail-test" data-expected="pass" data-accessibility-test="inputImageHasAlt">
 		<form action="http://example.com/prog/text-read" method="post">
 			<p>
-				<input type="image" name="submit" 
-				src="../assets/finddogs.gif" alt="Find Dogs"/>
+				<!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
+				<input type="image" name="submit"
+				src="" alt="Find Dogs"/>
 			</p>
 		</form>
 	</div>
