--- a/test/accessibility-tests/linkHasAUniqueContext.html
+++ b/test/accessibility-tests/linkHasAUniqueContext.html
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 
-	<div class="quail-test" data-expected="fail"
+	<div class="quail-test" data-expected="pass"
 	data-accessibility-test="linkHasAUniqueContext">
 		<!-- Not in the same sentence -->
 		<div>Dogs<br>
