Make travis happy about unitTests.html

--- a/test/core/unitTests.html
+++ b/test/core/unitTests.html
@@ -109,7 +109,7 @@
     </div>
     <div id="containsReadableText-1">This has some text.</div>
     <a id="containsReadableText-2">
-      <img src="../assets/rex.jpg" alt="This has some text."/>
+      <img src="" alt="This has some text."/>
     </a>
     <div id="containsReadableText-3">
       <p>
@@ -119,7 +119,7 @@
     <div id="containsReadableText-4">
       <p>
         <span>
-          <img src="../assets/rex.jpg" alt="This has some text."/>
+          <img src="" alt="This has some text."/>
         </span>
       </p>
     </div>
