--- a/test/accessibility-tests/colorFontContrast.html
+++ b/test/accessibility-tests/colorFontContrast.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>cssTextHasContrast</title>
+  <title>colorFontContrast</title>
   <style>
     #test-1 p {
       background: #E9E9E9;
@@ -165,82 +165,82 @@
   </style>
 </head>
 <body>
-  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-0">
+  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="colorFontContrast" id="test-0">
     <p>This text is readable</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-1">
+  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="colorFontContrast" id="test-1">
     <p>This text is not readable</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-2">
+  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="colorFontContrast" id="test-2">
     <p>This text is not readable, even if it's huge and bold</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-3">
+  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="colorFontContrast" id="test-3">
     <p>This test is readable.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-4">
+  <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="colorFontContrast" id="test-4">
     <p>This test is not readable, only 16px and not bold</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-5">
+  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="colorFontContrast" id="test-5">
     <p>This test is readable, 16px and bold</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-6">
+  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="colorFontContrast" id="test-6">
     <p>This test is readable, 16px and font weight 700</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundImageContrast:fail|colorBackgroundImageContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-7">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundImageContrast:fail|colorBackgroundImageContrast:fail" data-accessibility-test="colorFontContrast" id="test-7">
     <p>This test is not readable, thanks to the fish</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:pass|colorElementBehindBackgroundImageContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-8">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:pass|colorElementBehindBackgroundImageContrast:pass" data-accessibility-test="colorFontContrast" id="test-8">
     <p>This test is readable, thanks to the kids</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-9">
+  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail" data-accessibility-test="colorFontContrast" id="test-9">
     <p>This test is not readable</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-10">
+  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:pass" data-accessibility-test="colorFontContrast" id="test-10">
     <p>This test is readable</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-11">
+  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail" data-accessibility-test="colorFontContrast" id="test-11">
     <p>This test is not readable</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail|colorElementBehindBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-12">
+  <div class="quail-test" data-expected="colorFontContrast:fail|colorBackgroundGradientContrast:fail|colorElementBehindBackgroundGradientContrast:fail" data-accessibility-test="colorFontContrast" id="test-12">
     <p>This test is not readable, but on screen it is</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundGradientContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-13">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundGradientContrast:pass" data-accessibility-test="colorFontContrast" id="test-13">
     <p>This test is readable, does not check the gradient since there's a background color.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-14">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindContrast:fail" data-accessibility-test="colorFontContrast" id="test-14">
     <div class="bck"></div>
     <p class="txt">This test is not readable.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-16">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundGradientContrast:fail" data-accessibility-test="colorFontContrast" id="test-16">
     <div class="bck"></div>
     <p class="txt">This test is not readable.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundImageContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-18">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorElementBehindBackgroundImageContrast:fail" data-accessibility-test="colorFontContrast" id="test-18">
     <div class="bck"></div>
     <p class="txt">This test is not readable.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:cantTell" data-accessibility-test="cssTextHasContrast" id="test-19">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:cantTell" data-accessibility-test="colorFontContrast" id="test-19">
     <p>This test is readable, non existing background</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:pass|colorElementBehindBackgroundImageContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-20">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:pass|colorElementBehindBackgroundImageContrast:pass" data-accessibility-test="colorFontContrast" id="test-20">
     <p>This test is readable, external image</p>
   </div>
 
