Serve image assets correctly

--- a/test/assessmentSpecs/specs/aAdjacentWithSameResourceShouldBeCombined/aAdjacentWithSameResourceShouldBeCombined.html
+++ b/test/assessmentSpecs/specs/aAdjacentWithSameResourceShouldBeCombined/aAdjacentWithSameResourceShouldBeCombined.html
@@ -6,24 +6,24 @@
   <body>
     <!-- inapplicable -->
     <div>
-      <a href="products.html"><img src="../assets/go.gif" alt="" />Products page</a>
+      <a href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
     </div>
 
     <!-- passed -->
     <div>
-      <a href="products.html"><img src="../assets/go.gif" alt="" />Products page</a>
-      <a href="bullets.html"><img src="../assets/bullet.gif" alt="" />Bullet page</a>
+      <a href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
+      <a href="bullets.html"><img src="assets/bullet.gif" alt="" />Bullet page</a>
     </div>
 
     <!-- failed -->
     <div>
-      <a href="products.html"><img src="../assets/go.gif" alt="" /></a>
+      <a href="products.html"><img src="assets/go.gif" alt="" /></a>
       <a href="products.html">Products page</a>
     </div>
 
     <!-- failed -->
     <div>
-      <a href="products.html"><img src="../assets/go.gif" alt="Products page" /></a>
+      <a href="products.html"><img src="assets/go.gif" alt="Products page" /></a>
       <a href="products.html">Products page</a>
     </div>
   </body>
