Fixe up tests for aAdjacentWithSameResourceShouldBeCombined

--- a/test/assessmentSpecs/specs/aAdjacentWithSameResourceShouldBeCombined/aAdjacentWithSameResourceShouldBeCombined.html
+++ b/test/assessmentSpecs/specs/aAdjacentWithSameResourceShouldBeCombined/aAdjacentWithSameResourceShouldBeCombined.html
@@ -6,25 +6,25 @@
   <body>
     <!-- inapplicable -->
     <div>
-      <a href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
+      <a id="assert-1" href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
     </div>
 
     <!-- passed -->
     <div>
-      <a href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
-      <a href="bullets.html"><img src="assets/bullet.gif" alt="" />Bullet page</a>
+      <a id="assert-2" href="products.html"><img src="assets/go.gif" alt="" />Products page</a>
+      <a id="assert-3" href="bullets.html"><img src="assets/bullet.gif" alt="" />Bullet page</a>
     </div>
 
     <!-- failed -->
     <div>
-      <a href="products.html"><img src="assets/go.gif" alt="" /></a>
-      <a href="products.html">Products page</a>
+      <a id="assert-4" href="products.html"><img src="assets/go.gif" alt="" /></a>
+      <a id="assert-5" href="products.html">Products page</a>
     </div>
 
     <!-- failed -->
     <div>
-      <a href="products.html"><img src="assets/go.gif" alt="Products page" /></a>
-      <a href="products.html">Products page</a>
+      <a id="assert-6" href="products.html"><img src="assets/go.gif" alt="Products page" /></a>
+      <a id="assert-7" href="products.html">Products page</a>
     </div>
   </body>
 </html>
