Fix tests for aImgAltNotRepetitive

--- a/test/assessmentSpecs/specs/aImgAltNotRepetitive/aImgAltNotRepetitive.html
+++ b/test/assessmentSpecs/specs/aImgAltNotRepetitive/aImgAltNotRepetitive.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <div>
-      <a href="page1.html"><img src="assets/rex.jpg" alt=""/>page1</a>
+      <a href="page1.html"><img id="assert-1" src="assets/rex.jpg" alt=""/>page1</a>
     </div>
 
     <div>
-      <a href="page1.html" class="quail-failed-element"><img src="assets/rex.jpg" alt="page1"/>page1</a>
+      <a href="page1.html" class="quail-failed-element"><img id="assert-2" src="assets/rex.jpg" alt="page1"/>page1</a>
     </div>
   </body>
 </html>
