Fix tests for aMustHaveTitle

--- a/test/assessmentSpecs/specs/aMustHaveTitle/aMustHaveTitle.html
+++ b/test/assessmentSpecs/specs/aMustHaveTitle/aMustHaveTitle.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <!-- passed -->
-    <p>We have information about <a href="dogs.html" title="dogs information">dogs</a> on our site.</p>
+    <p>We have information about <a id="assert-1" href="dogs.html" title="dogs information">dogs</a> on our site.</p>
     <!-- failed -->
-    <p>We have more <a href="dogs.html">information about dogs</a> on our site.</p>
+    <p>We have more <a id="assert-2" href="dogs.html">information about dogs</a> on our site.</p>
   </body>
 </html>
