Update the initial HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-My Page
+<!doctype html>
+<html>
+<head>
+  <title>Quail.js | Accessibility Testing Framework</title>
+</head>
+<body>
+  <p>placeholder</p>
+</body>
+</html>
