Get aLinksAreSeparatedByPrintableCharacters to green.

--- a/test/assessmentSpecs/specs/aLinksAreSeparatedByPrintableCharacters/aLinksAreSeparatedByPrintableCharacters.html
+++ b/test/assessmentSpecs/specs/aLinksAreSeparatedByPrintableCharacters/aLinksAreSeparatedByPrintableCharacters.html
@@ -5,12 +5,11 @@
 	</head>
 	<body>
 		<div data-expected="pass">
-			<a href="dogs">dogs</a> | <a href="cats">cats</a> | <a href="birds">birds</a> | <a href="snakes">snakes</a>
+			<a id="assert-1" href="dogs">dogs</a> | <a id="assert-2" href="cats">cats</a> | <a id="assert-3" href="birds">birds</a> | <a href="snakes">snakes</a>
 		</div>
 
 		<div data-expected="fail">
-            <a href="dogs">dogs</a>  <a href="cats">cats</a>  <a href="birds">birds</a> <a href="snakes">snakes</a>
+      <a id="assert-4" href="dogs">dogs</a>  <a id="assert-5" href="cats">cats</a>  <a id="assert-6" href="birds">birds</a> <a href="snakes">snakes</a>
 		</div>
-
-		    </body>
+	</body>
 </html>
