Get aLinksNotSeparatedBySymbols to Green

--- a/test/assessmentSpecs/specs/aLinksNotSeparatedBySymbols/aLinksNotSeparatedBySymbols.html
+++ b/test/assessmentSpecs/specs/aLinksNotSeparatedBySymbols/aLinksNotSeparatedBySymbols.html
@@ -6,20 +6,20 @@
 <body>
 	<div data-expected="fail">
 
-		<a href="dogs" class="quail-failed-element">dogs</a>
+		<a id="assert-1" href="dogs" class="quail-failed-element">dogs</a>
 		|
-		<a href="cats" class="quail-failed-element">cats</a>
+		<a id="assert-2" href="cats" class="quail-failed-element">cats</a>
 	</div>
 
 	<div data-expected="pass">
-		<a href="dogs">dogs</a>
-		<a href="cats">cats</a>
+		<a id="assert-3" href="dogs">dogs</a>
+		<a id="assert-4" href="cats">cats</a>
 	</div>
 
 	<div data-expected="pass">
-		<a href="birds">birds</a>
+		<a id="assert-5" href="birds">birds</a>
 		text
-		<a href="snakes">snakes</a>
+		<a id="assert-6" href="snakes">snakes</a>
 	</div>
 
   </body>
