Get aLinksToMultiMediaRequireTranscript to green.

--- a/test/assessmentSpecs/specs/aLinksToMultiMediaRequireTranscript/aLinksToMultiMediaRequireTranscript.html
+++ b/test/assessmentSpecs/specs/aLinksToMultiMediaRequireTranscript/aLinksToMultiMediaRequireTranscript.html
@@ -4,26 +4,24 @@
 		<title>aLinksToMultiMediaRequireTranscript</title>
 	</head>
 	<body>
-		<div data-expected="pass"></div>
-
 		<div data-expected="fail">
-			<p>View <a href="movie.mpg" class="quail-failed-element">the movie</a>.</p>
+			<p>View <a id="assert-1" href="movie.mpg" class="quail-failed-element">the movie</a>.</p>
 		</div>
 
 		<div data-expected="fail">
-			<p>View <a href="movie.mov" class="quail-failed-element">the movie</a>.</p>
+			<p>View <a id="assert-2" href="movie.mov" class="quail-failed-element">the movie</a>.</p>
 		</div>
 
 		<div data-expected="fail">
-			<p>View <a href="movie.ram" class="quail-failed-element">the movie</a>.</p>
+			<p>View <a id="assert-3" href="movie.ram" class="quail-failed-element">the movie</a>.</p>
 		</div>
 
 		<div data-expected="fail">
-			<p>View <a href="movie.aif" class="quail-failed-element">the movie</a>.</p>
+			<p>View <a id="assert-4" href="movie.aif" class="quail-failed-element">the movie</a>.</p>
 		</div>
 
 		<div data-expected="fail">
-			<p>View <a href="movie.wmv" class="quail-failed-element">the movie</a>.</p>
+			<p>View <a id="assert-5" href="movie.wmv" class="quail-failed-element">the movie</a>.</p>
 		</div>
 
 		</body>
