Tests for aLinksToSoundFilesNeedTranscripts

--- a/test/assessmentSpecs/specs/aLinksToSoundFilesNeedTranscripts/aLinksToSoundFilesNeedTranscripts.html
+++ b/test/assessmentSpecs/specs/aLinksToSoundFilesNeedTranscripts/aLinksToSoundFilesNeedTranscripts.html
@@ -1,27 +1,48 @@
 <!doctype html>
 <html>
-	<head>
-		<title>aLinksToSoundFilesNeedTranscripts</title>
-	</head>
-	<body>
-		<div data-expected="pass">
+  <head>
+    <title>aLinksToSoundFilesNeedTranscripts</title>
+  </head>
+  <body>
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-1" href="carol-talking.sam">Carol talking about dogs</a>.</p>
+    </div>
 
-		</div>
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-2" href="carol-talking.smp">Carol talking about dogs</a>.</p>
+    </div>
 
-		<div data-expected="fail">
-			<p>Listen to <a href="carol-talking.sam" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.smp" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.vce" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.vox" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.pcm" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.aif" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.wav" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.svx" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.iff" class="quail-failed-element">Carol talking about dogs</a>.</p>
-			<p>Listen to <a href="carol-talking.snd" class="quail-failed-element">Carol talking about dogs</a>.</p>
-		</div>
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-3" href="carol-talking.vce">Carol talking about dogs</a>.</p>
+    </div>
 
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-4" href="carol-talking.vox">Carol talking about dogs</a>.</p>
+    </div>
 
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-5" href="carol-talking.pcm">Carol talking about dogs</a>.</p>
+    </div>
 
-		</body>
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-6" href="carol-talking.aif">Carol talking about dogs</a>.</p>
+    </div>
+
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-7" href="carol-talking.wav">Carol talking about dogs</a>.</p>
+    </div>
+
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-8" href="carol-talking.svx">Carol talking about dogs</a>.</p>
+    </div>
+
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-9" href="carol-talking.iff">Carol talking about dogs</a>.</p>
+    </div>
+
+    <div data-expected="fail">
+      <p>Listen to <a id="assert-10" href="carol-talking.snd">Carol talking about dogs</a>.</p>
+    </div>
+
+    </body>
 </html>
